package inf112.skeleton.app;

import java.util.ArrayList;

public interface IDeck {

    public ArrayList<Cards> getDeckList();

    //public void addCard(Cards card);

   // public Cards getCard(Cards card);

}
