@startuml

title __APP's Class Diagram__\n

  package inf112.skeleton.app {
    class CardSlots {
        - cardSlotTexture : Texture
        - cardSlotSprite1 : Sprite
        - cardSlotSprite2 : Sprite
        - posX : float
        - posY : float
        - batch : Batch
        - insideCardslot : boolean
        + CardSlots()
        + CardSlots()
        + getCardSlotSprite()
        + getIsInsideSlot()
        + setInsideCardslot()
        + getPosX()
        + getPosY()
    }
  }
  

  package inf112.skeleton.app {
    enum CardValues {
      BACKUP
      MOVE1
      MOVE2
      MOVE3
      ROTATE90
      ROTATE180
      ROTATEC90
      spr
      priority
      name
    }
  }
  

  package inf112.skeleton.app {
    class Cards {
        - cardTexture : Texture
        - cardSlotTexture : Texture
        - cardSprite : Sprite
        - defaultPosX : float
        - defaultPosY : float
        - posX : float
        - posY : float
        - batch : Batch
        - name : String
        - priority : int
        - deck : Deck
        + Cards()
        + Cards()
        + getName()
        + getPriority()
        + getCardSprite()
        + getPosX()
        + getPosY()
        + getDefaultPosX()
        + getDefaultPosY()
    }
  }
  

  package inf112.skeleton.app {
    class Deck {
        {static} - DeckList : ArrayList<Cards>
        + Deck()
        + getDeckList()
        {static} + addCard()
        {static} + getCard()
    }
  }
  

  package inf112.skeleton.app {
    class GameEvent {
        - flag1X : int
        - flag1Y : int
        - flag2X : int
        - flag2Y : int
        - flag3X : int
        - flag3Y : int
        - flag4X : int
        - flag4Y : int
        + updateCheckpoint()
    }
  }
  

  package inf112.skeleton.app {
    class HelloWorld {
        - batch : SpriteBatch
        - font : BitmapFont
        - i : int
        + create()
        + dispose()
        + render()
        + resize()
        + pause()
        + resume()
        + keyDown()
        + keyUp()
        + keyTyped()
        + touchDown()
        + touchUp()
        + touchDragged()
        + mouseMoved()
        + scrolled()
    }
  }
  

  package inf112.skeleton.app {
    interface ICard {
        {abstract} + getCardSprite()
        {abstract} + getPosX()
        {abstract} + getPosY()
        {abstract} + getDefaultPosX()
        {abstract} + getDefaultPosY()
    }
  }
  

  package inf112.skeleton.app {
    interface IDeck {
        {abstract} + getDeckList()
    }
  }
  

  package inf112.skeleton.app {
    interface IRobot {
        {abstract} + getPosX()
        {abstract} + getPosY()
        {abstract} + getTextureStr()
        {abstract} + getTexture()
        {abstract} + getSprite()
    }
  }
  

  package inf112.skeleton.app {
    class Main {
        {static} + main()
    }
  }
  

  package inf112.skeleton.app {
    class RoboRallyDemo {
        - tiledMap : TiledMap
        - tiledMapRenderer : TiledMapRenderer
        - camera : OrthographicCamera
        - i : int
        - clickedCard : Cards
        - CardButton : Cards
        - robot : Robot
        - counter : int
        - isDone : boolean
        - cardSlotPos : ArrayList<CardSlots>
        - randomSpriteList : ArrayList<Sprite>
        - spritePos : ArrayList<Sprite>
        - Deck : Deck
        # selectedCards : Cards[]
        - batch : SpriteBatch
        - texture : Texture
        - buttonTexture : Texture
        - buttonSprite : Sprite
        - sprite : Sprite
        - cardSprite10 : Sprite
        - cardTexture : Texture
        - posX : float
        - posY : float
        - test : boolean
        + RoboRallyDemo()
        + create()
        + dispose()
        + render()
        + resize()
        + pause()
        + resume()
        + keyDown()
        + keyUp()
        + keyTyped()
        + touchDown()
        + touchUp()
        + touchDragged()
        + mouseMoved()
        + scrolled()
        + getCardCenterX()
        + getCardCenterY()
        + getCardSlotCenterX()
        + getCardSlotCenterY()
        + insideCardSlot()
        + insideCard()
        - setSprite()
        - setCardSprites()
        - createDecklist()
        - drawCards()
        - createCardSlots()
        - drawCardSlots()
        - getRandomSprite()
        - rng()
        - addSprites()
    }
  }
  

  package inf112.skeleton.app {
    class Robot {
        - sprite : Sprite
        - posX : int
        - posY : int
        - checkpoint : int[]
        - flagsPassed : int
        - direction : int
        + Robot()
        + Robot()
        + Robot()
        + getPosX()
        + getPosY()
        + getSprite()
        + getCheckpoint()
        + getFlagsPassed()
        + getDirection()
        + setCheckpoint()
        + setFlagsPassed()
        + setPosX()
        + setPosY()
        + rotate_right()
        + rotate_left()
        + moveForward()
        + move()
    }
  }
  

  Cards -up-|> ICard
  Cards o-- Cards : Dummycard0
  Deck -up-|> IDeck
  HelloWorld -up-|> ApplicationListener
  HelloWorld -up-|> InputProcessor
  RoboRallyDemo -up-|> ApplicationListener
  RoboRallyDemo -up-|> InputProcessor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
